--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="icon" href="favicon.png">
 
-	<title> Abdulrahman Butt </title>
+	<title> WebSects </title>
 
 	<link rel="stylesheet" href="css/bootstrap.css">
 	<link rel="stylesheet" href="css/font-awesome.css">
@@ -15,11 +15,11 @@
 <main class="wrapper">
 	<nav id="navbar">
 		<h4 id="logo">
-			<a href="#"> AbdulRahman Butt </a>
+			<a href="index.html"> AbdulRahman Butt </a>
 		</h4>
 
 		<ul id="navbar-nav">
-			<li><a href="#"> Home </a></li>
+			<li><a href="index.html"> Home </a></li>
 			<li><a href="#"> About </a></li>
 			<li><a href="#"> Contact </a></li>
 		</ul>
