--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 <main class="wrapper">
 	<nav id="navbar">
 		<h4 id="logo">
-			<a href="index.html"> AbdulRahman Butt </a>
+			<a href="https://websects.github.io/"> AbdulRahman Butt </a>
 		</h4>
 
 		<ul id="navbar-nav">
-			<li><a href="index.html"> Home </a></li>
+			<li><a href="https://websects.github.io/"> Home </a></li>
 			<li><a href="#"> About </a></li>
 			<li><a href="#"> Contact </a></li>
 		</ul>
