--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title> WebSects </title>
     
     <link href="css/bootstrap.css" rel="stylesheet" />
-	<link href="css/coming-sssoon.css" rel="stylesheet" />
+	<link href="css/style.css" rel="stylesheet" />
 	<!--     Fonts     -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link href='http://fonts.googleapis.com/css?family=Grand+Hotel' rel='stylesheet' type='text/css'>
