--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 
   <title>WebSects</title>
 
-  <link href="./css/bootstrap.css" rel="stylesheet" />
-  <link href="./css/style.css" rel="stylesheet" />    
+  <link href="../css/bootstrap.css" rel="stylesheet" />
+  <link href="../css/style.css" rel="stylesheet" />    
   <!--     Fonts     -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
   <link href='http://fonts.googleapis.com/css?family=Grand+Hotel' rel='stylesheet' type='text/css'>
@@ -114,6 +114,6 @@
     </div>
  </div>
  </body>
-   <script src="js/jquery-1.10.2.js" type="text/javascript"></script>
-   <script src="js/bootstrap.min.js" type="text/javascript"></script>
+   <script src="../js/jquery-1.10.2.js" type="text/javascript"></script>
+   <script src="../js/bootstrap.min.js" type="text/javascript"></script>
 </html>
