--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link href="../css/style.css" rel="stylesheet" />    
   <!--     Fonts     -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-  <link href='http://fonts.googleapis.com/css?family=Grand+Hotel' rel='stylesheet' type='text/css'>
+  <link href="https://fonts.googleapis.com/css?family=Grand+Hotel" rel="stylesheet">
   
 </head>
 
